search bar bug fixed on mobile, garga icon smaller

--- a/flask/static/master.css
+++ b/flask/static/master.css
@@ -25,8 +25,8 @@ body {
     background-image: url('/static/images/garga.svg');
     background-size:contain;
     background-repeat: no-repeat;
-    width: 4.3rem;
-    height: 4.3rem;
+    width: 4.0rem;
+    height: 4.0rem;
     margin-left: 17px;
     margin-top: 13px;
 }
@@ -163,7 +163,6 @@ p,h3{
   border: 0px;
   outline: 0px;
   color: white;
-  padding: 12px 16px;
   background-color: inherit;
   font-family: inherit;
   margin: 0;
@@ -232,7 +231,7 @@ ol li::before {
   color: black;
   font-weight: bold;
 }
-@media only screen and (orientation: landscape){
+@media only screen and (min-device-aspect-ratio: 1/1){
     #myDropdown,#dropbtn{
         display: none;
     }
@@ -273,7 +272,7 @@ ol li::before {
     }
 }
 
-@media only screen and (orientation: portrait){
+@media only screen and (max-device-aspect-ratio: 1/1){
     .desktop_menus{
         display: none;
     }
@@ -285,6 +284,7 @@ ol li::before {
         flex-direction: column;
         justify-content: space-between;
         overflow: visible;
+        margin: 0;
     }
     .liner{
         height: 0.2rem;
